tests/NormalTests/paczka1/small_fuzzy/54391979.err
Error in line 2: qapbK1HGAp A519 25,0
Error in line 6: Ymj A194 0,70
Error in line 3: Wku A519 61,8
Error in line 4: qapbK1HGAp A194 15,3
Error in line 11: qapbK1HGAp A519 20,2
